--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tailwindui-syntax",
+  "name": "ethos-docs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -23,8 +23,8 @@
     "postcss-focus-visible": "^6.0.4",
     "postcss-import": "^14.1.0",
     "prism-react-renderer": "^1.3.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
