--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.5.0",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.5",
     "prettier": "^2.7.1",
