--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,8 +14,9 @@ jobs:
         run: |
           npm ci
           npm run build
+          npm run export
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: .next # The folder the action should deploy.
+          folder: out # The folder the action should deploy.
