--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "export": "next export"
+    "lint": "next lint"
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
@@ -19,7 +18,7 @@
     "@tailwindcss/typography": "^0.5.7",
     "autoprefixer": "^10.4.12",
     "clsx": "^1.2.1",
-    "ethos-connect": "^0.0.9",
+    "ethos-connect": "^0.0.7",
     "focus-visible": "^5.2.0",
     "next": "^12.3.1",
     "postcss-focus-visible": "^6.0.4",
