--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ethos-connect": "^0.0.154",
     "focus-visible": "^5.2.0",
     "next": "^12.3.1",
+    "next-plausible": "^3.7.2",
     "postcss-focus-visible": "^6.0.4",
     "postcss-import": "^14.1.0",
     "prism-react-renderer": "^1.3.5",
